@@ -9,9 +9,9 @@
       GNOME translation status - GNOME 1.4 core
 
       This table shows the GNOME translation status for the GNOME 1.4 Core Release.
-      All data is shown as percentage of translated messages and you
-      could download the latest .po &amp;&amp; .pot files from this page.
-      You could see more detailed information from locale links.
+      All data is shown as percentage of translated messages, and you
+      can download the latest .po &amp;&amp; .pot files from this page.
+      You can see more detailed information at the locale links.
     </mainhead>
     <mainfoot></mainfoot>
   </release>
@@ -21,9 +21,9 @@
       GNOME translation status - GNOME 1.4 Fifth Toe
 
       This table shows the GNOME translation status for the GNOME 1.4 Fifth Toe Release.
-      All data is shown as percentage of translated messages and you
-      could download the latest .po &amp;&amp; .pot files from this page.
-      You could see more detailed information from locale links.
+      All data is shown as percentage of translated messages, and you
+      can download the latest .po &amp;&amp; .pot files from this page.
+      You can see more detailed information at the locale links.
     </mainhead>
     <mainfoot></mainfoot>
   </release>
@@ -33,9 +33,9 @@
       GNOME translation status - GNOME 1.4 Extra
 
       This table shows the GNOME translation status for the GNOME 1.4 Extra software.
-      All data is shown as percentage of translated messages and you
-      could download the latest .po &amp;&amp; .pot files from this page.
-      You could see more detailed information from locale links.
+      All data is shown as percentage of translated messages, and you
+      can download the latest .po &amp;&amp; .pot files from this page.
+      You can see more detailed information at the locale links.
     </mainhead>
     <mainfoot></mainfoot>
   </release>
@@ -45,9 +45,9 @@
       GNOME translation status - GNOME 2.0 core
 
       This table shows the GNOME translation status for the GNOME 2.0 Core Release.
-      All data is shown as percentage of translated messages and you
-      could download the latest .po &amp;&amp; .pot files from this page.
-      You could see more detailed information from locale links.
+      All data is shown as percentage of translated messages, and you
+      can download the latest .po &amp;&amp; .pot files from this page.
+      You can see more detailed information at the locale links.
     </mainhead>
     <mainfoot></mainfoot>
   </release>
@@ -57,9 +57,9 @@
       GNOME translation status - GNOME 2.0 Fifth Toe
 
       This table shows the GNOME translation status for the GNOME 2.0 Fifth Toe Release.
-      All data is shown as percentage of translated messages and you
-      could download the latest .po &amp;&amp; .pot files from this page.
-      You could see more detailed information from locale links.
+      All data is shown as percentage of translated messages, and you
+      can download the latest .po &amp;&amp; .pot files from this page.
+      You can see more detailed information at the locale links.
     </mainhead>
     <mainfoot></mainfoot>
   </release>
@@ -69,9 +69,9 @@
       GNOME translation status - GNOME 2.0 Extra
 
       This table shows the GNOME translation status for the GNOME 2.0 Extra software.
-      All data is shown as percentage of translated messages and you
-      could download the latest .po &amp;&amp; .pot files from this page.
-      You could see more detailed information from locale links.
+      All data is shown as percentage of translated messages, and you
+      can download the latest .po &amp;&amp; .pot files from this page.
+      You can see more detailed information at the locale links.
     </mainhead>
     <mainfoot></mainfoot>
   </release>
@@ -82,9 +82,9 @@
       GNOME translation status - GNOME 2.1.x core
 
       This table shows the GNOME translation status for the GNOME 2.1.x Core Release.
-      All data is shown as percentage of translated messages and you
-      could download the latest .po &amp;&amp; .pot files from this page.
-      You could see more detailed information from locale links.
+      All data is shown as percentage of translated messages, and you
+      can download the latest .po &amp;&amp; .pot files from this page.
+      You can see more detailed information at the locale links.
     </mainhead>
     <mainfoot></mainfoot>
   </release>
@@ -94,9 +94,9 @@
       GNOME translation status - GNOME 2.1.x Fifth Toe
 
       This table shows the GNOME translation status for the GNOME 2.1.x Fifth Toe Release.
-      All data is shown as percentage of translated messages and you
-      could download the latest .po &amp;&amp; .pot files from this page.
-      You could see more detailed information from locale links.
+      All data is shown as percentage of translated messages, and you
+      can download the latest .po &amp;&amp; .pot files from this page.
+      You can see more detailed information at the locale links.
     </mainhead>
     <mainfoot></mainfoot>
   </release>
@@ -106,9 +106,9 @@
       GNOME translation status - GNOME 2.1.x Extra
 
       This table shows the GNOME translation status for the GNOME 2.1.x Extra software.
-      All data is shown as percentage of translated messages and you
-      could download the latest .po &amp;&amp; .pot files from this page.
-      You could see more detailed information from locale links.
+      All data is shown as percentage of translated messages, and you
+      can download the latest .po &amp;&amp; .pot files from this page.
+      You can see more detailed information at the locale links.
     </mainhead>
     <mainfoot></mainfoot>
   </release>
@@ -168,6 +168,17 @@
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
+      </component>
+    </version>
+  </module>
+  <module name="atk">
+    <version release="gnome-2.1-core">
+      <component name="atk" dir="atk">
+        <podir dir="po"/>
+        <potname name="atk10.pot"/>
+        <branch name="HEAD"/>
+	<regenerate/>
+	<download/>
       </component>
     </version>
   </module>
