@@ -1,5 +1,10 @@
 2002-11-30  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Added atk to 2.1-core. Fixed some
+	strangeness in the page descriptions.
+
+2002-11-30  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Fixed branch for glimmer. The GNOME-2-0
 	branch has no po directory at all, so we better use HEAD.
 
